syntax = "proto3";

package service;

service TodoAPI {
  rpc GetTodo (GetTodoRequest) returns (GetTodoResponse) {}
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
  rpc ListTodos (ListTodosRequest) returns (ListTodosResponse) {}
}

message Todo {
  string title = 1;
  bool doing = 2;
}

message GetTodoRequest {
  string id = 1;
}

message GetTodoResponse {
  Todo todo = 1;
}

message CreateTodoRequest {
  Todo todo = 1;
}

message CreateTodoResponse {
  bool success = 1;
  string id = 2;
}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}
